k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arev-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arev-backend
  template:
    metadata:
      labels:
        app: arev-backend
    spec:
      containers:
        - name: arev-backend
          image: lukeaslanian/arev-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
