k8s/python-deployment.yaml
# k8s/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arev-python-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arev-python-service
  template:
    metadata:
      labels:
        app: arev-python-service
    spec:
      containers:
        - name: arev-python-service
          image: your-dockerhub-username/arev-python-service:latest
          ports:
            - containerPort: 5000
