k8s/rontend-deployment.yaml
# k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arev-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arev-frontend
  template:
    metadata:
      labels:
        app: arev-frontend
    spec:
      containers:
        - name: arev-frontend
          image: your-dockerhub-username/arev-frontend:latest
          ports:
            - containerPort: 3000
